--- a/Eng/Common/Workarounds.targets
+++ b/Eng/Common/Workarounds.targets
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project>
   <!-- Place the generated AssemblyAttributes source file into IntDir. By
        default it is generated in the user's temp directory.
