--- a/Eng/Common/DeterministicBuild.props
+++ b/Eng/Common/DeterministicBuild.props
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project>
   <PropertyGroup>
     <Deterministic Condition="'$(Deterministic)' == '' and '$(ContinuousIntegrationBuild)' == 'true'">true</Deterministic>
@@ -7,7 +8,8 @@
 
   <ItemDefinitionGroup Condition="'$(MSBuildProjectExtension)' == '.vcxproj' and '$(Deterministic)' == 'true'">
     <ClCompile>
-      <AdditionalOptions>%(AdditionalOptions) /experimental:deterministic</AdditionalOptions>
+      <AdditionalOptions Condition="'$(CLRSupport)' == 'false'">%(AdditionalOptions) /experimental:deterministic</AdditionalOptions>
+      <AdditionalOptions Condition="'$(CLRSupport)' != 'false'">%(AdditionalOptions) /Brepro</AdditionalOptions>
     </ClCompile>
 
     <Link>
