--- a/Eng/Common/ProjectLayout.props
+++ b/Eng/Common/ProjectLayout.props
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <Project>
   <PropertyGroup>
     <BuildRoot Condition="'$(BuildRoot)' == ''">$(RepoRoot)build\</BuildRoot>
@@ -11,33 +12,22 @@
     <OutputPlatform Condition="'$(Platform)' == 'AnyCPU'">any</OutputPlatform>
     <OutputPlatform Condition="'$(OutputPlatform)' == ''">$(Platform)</OutputPlatform>
     <OutputBaseName Condition="'$(OutputBaseName)' == ''">$(OutputPlatform)$(ConfigSuffix)</OutputBaseName>
+    <BuildFolder Condition="'$(BuildFolder)' == ''">$(OutputBaseName)</BuildFolder>
+    <BinDir>$(BuildRoot)$(BuildFolder)\bin\</BinDir>
+    <ObjDir>$(BuildRoot)$(BuildFolder)\obj\</ObjDir>
   </PropertyGroup>
 
   <!-- Native projects -->
   <PropertyGroup Condition="'$(MSBuildProjectExtension)' == '.vcxproj'">
-    <Toolset>$(PlatformToolset)</Toolset>
-    <Toolset Condition="'$(PlatformToolset)' == 'v90'">vc90</Toolset>
-    <Toolset Condition="'$(PlatformToolset)' == 'v100'">vc100</Toolset>
-    <Toolset Condition="'$(PlatformToolset)' == 'Windows7.1SDK'">vc101</Toolset>
-    <Toolset Condition="'$(PlatformToolset)' == 'v110'">vc110</Toolset>
-    <Toolset Condition="'$(PlatformToolset)' == 'v120'">vc120</Toolset>
-    <Toolset Condition="'$(PlatformToolset)' == 'v140'">vc140</Toolset>
-    <Toolset Condition="'$(PlatformToolset)' == 'v141'">vc141</Toolset>
-    <Toolset Condition="'$(PlatformToolset)' == 'v142'">vc142</Toolset>
-
-    <OutDir Condition="'$(UseSharedOutputPath)' != 'true'">$(BuildRoot)$(OutputBaseName)\bin\$(MSBuildProjectName)\</OutDir>
-    <OutDir Condition="'$(UseSharedOutputPath)' == 'true'">$(BuildRoot)$(OutputBaseName)\bin\</OutDir>
-    <IntDir>$(BuildRoot)$(OutputBaseName)\obj\$(MSBuildProjectName)\</IntDir>
+    <OutDir>$(BinDir)$(MSBuildProjectName)\</OutDir>
+    <IntDir>$(ObjDir)$(MSBuildProjectName)\</IntDir>
   </PropertyGroup>
 
   <!-- Managed projects -->
   <PropertyGroup Condition="'$(MSBuildProjectExtension)' == '.csproj'">
-    <BaseOutputPath Condition="'$(BaseOutputPath)' == ''">$([System.IO.Path]::GetFullPath('$(BuildRoot)$(OutputBaseName)\bin\'))</BaseOutputPath>
-    <OutputPath Condition="'$(UseSharedOutputPath)' != 'true'">$(BaseOutputPath)$(MSBuildProjectName)\</OutputPath>
-    <OutputPath Condition="'$(UseSharedOutputPath)' == 'true'">$(BaseOutputPath)</OutputPath>
-
-    <!-- BaseIntermediateOutputPath must be project-specific. -->
-    <BaseIntermediateOutputPath>$([System.IO.Path]::GetFullPath('$(BuildRoot)$(OutputBaseName)\obj\$(MSBuildProjectName)\'))</BaseIntermediateOutputPath>
+    <BaseOutputPath Condition="'$(BaseOutputPath)' == ''">$([System.IO.Path]::GetFullPath('$(BinDir)$(MSBuildProjectName)\'))</BaseOutputPath>
+    <BaseIntermediateOutputPath Condition="'$(BaseIntermediateOutputPath)' == ''">$([System.IO.Path]::GetFullPath('$(ObjDir)$(MSBuildProjectName)\'))</BaseIntermediateOutputPath>
+    <OutputPath>$(BaseOutputPath)</OutputPath>
     <IntermediateOutputPath>$(BaseIntermediateOutputPath)</IntermediateOutputPath>
   </PropertyGroup>
 </Project>
